[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://multiplayer/connect_screen.gd" id="1"]

[node name="ConnectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.06, 0.1, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -160.0
offset_right = 180.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "MULTIPLAYER"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Enter name, then host or join"
horizontal_alignment = 1

[node name="NameRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBox/NameRow"]
layout_mode = 2
text = "Name:"
custom_minimum_size = Vector2(48, 0)

[node name="NameEdit" type="LineEdit" parent="VBox/NameRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Player"

[node name="AddressRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="AddrLabel" type="Label" parent="VBox/AddressRow"]
layout_mode = 2
text = "IP:"
custom_minimum_size = Vector2(48, 0)

[node name="AddressEdit" type="LineEdit" parent="VBox/AddressRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "127.0.0.1"

[node name="HostBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "Host Game"

[node name="JoinBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "Join Game"

[node name="BackBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "Back"
